# easy_tbot

./: .gitignore  README.md  pyproject.toml
easy_tbot/: __init__.py
easy_tbot/contrib/bot/aiogram/: __init__.py  backend.py
easy_tbot/contrib/db/alchemy/: __init__.py  backend.py  shorcuts.py
easy_tbot/contrib/db/dummy/: backend.py
easy_tbot/contrib/shell/ArgParserShell/: backend.py
easy_tbot/contrib/template/jinja/: __init__.py  backend.py
easy_tbot/core/: _meta_singleton.py
easy_tbot/core/_tools/: meta.py  meta_singleton.py
easy_tbot/core/bot/: backend.py  loader.py
easy_tbot/core/bot/decorators/: _wrapper_factory.py  chanel_post.py  inline.py  message.py  middleware.py  poll.py  query.py
easy_tbot/core/bot/handlers/: base.py  channel_post.py  inline.py  message.py  middleware.py  poll.py  query.py
easy_tbot/core/bot/setups/: __init__.py  base.py  chanel_post.py  inline.py  message.py  middleware.py  poll.py  query.py
easy_tbot/core/cli/: loader.py
easy_tbot/core/db/: loader.py
easy_tbot/core/render/: loader.py
easy_tbot/core/shell/: backend.py  loader.py
easy_tbot/core/tools/: meta.py
