[tool.poetry]
name = "easy_tbot"
version = "1.1.0"
description = ""
authors = ["Jesús Enrique <jesusefg12@gmail.com>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
